--- a/style.css
+++ b/style.css
@@ -70,13 +70,13 @@ main {
 .movie-info {
 	display: flex;
 	justify-content: space-between;
-	margin: 1rem .5rem;
+	margin: 1rem 0.5rem;
 	letter-spacing: 1px;
 }
 
 .movie-info span {
 	background-color: var(--primary-color);
-	padding: .3rem .4rem;
+	padding: 0.3rem 0.4rem;
 	border-radius: 3px;
 }
 
@@ -91,8 +91,8 @@ main {
 }
 
 .overview {
-	background-color: #fff;
-	color: #0f0f0f;
+	background-color: rgba(0, 0, 0, 0.6);
+	color: #ffffff;
 	padding: 2rem;
 	position: absolute;
 	left: 0;
@@ -106,5 +106,3 @@ main {
 .movie:hover .overview {
 	transform: translateY(0);
 }
-
-
